# router/Router.go
@@ -21,6 +21,8 @@ func Router() *gin.Engine {
 	r.GET("/user/getUserList", service.GetUserList)
 	r.GET("/product", service.GetProductList)
 	r.GET("/user/register", service.Register)
-	r.GET("/user/modifyPassword", service.ModifyPassword)
+	r.POST("/user/modifyPassword", service.ModifyPassword)
+	r.POST("/user/getCode", service.GetCode)
+	r.POST("/user/forgetPassword", service.ForgetPassword)
 	return r
 }
